--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bot Status</title>
     <style>
-        body { font-family: Arial, sans-serif; line-height: 1.5; }
-        .status { margin: 20px; padding: 20px; border: 1px solid #ccc; border-radius: 8px; }
+        body { font-family: Arial, sans-serif; line-height: 1.5; margin: 20px; }
+        .status { padding: 20px; border: 1px solid #ccc; border-radius: 8px; }
     </style>
 </head>
 <body>
@@ -16,7 +16,7 @@
     <script>
         async function fetchStatus() {
             try {
-                const response = await fetch("https://<ユーザー名>.github.io/bot-status/data.json");
+                const response = await fetch("./data.json");
                 const data = await response.json();
 
                 document.getElementById("status").innerHTML = `
