--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta property="url" content="">
   <link rel="shortcut icon" href="logo.png" type="image/vnd.microsoft.icon">
-  <title>VibeShift</title>
+  <title>茜-あかね-公式ホームページ</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
