--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 <body class="bg-gray-900 text-gray-300 font-sans">
   <nav class="bg-gray-800 fixed w-full z-10 top-0 shadow-lg">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 flex items-center justify-between h-16">
-      <a href="index.html" class="text-gray-100 text-xl font-bold">Fortify</a>
+      <a href="index.html" class="text-gray-100 text-xl font-bold">茜-あかね-</a>
       <div class="flex items-center">
         <button id="menu-button" class="sm:hidden text-gray-300 focus:outline-none" aria-label="Open menu">
           <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
@@ -170,9 +170,9 @@
         </thead>
         <tbody>
           <tr>
-            <td class="border px-4 py-2">99.99%</td>
-            <td class="border px-4 py-2">95000+</td>
-            <td class="border px-4 py-2">150+</td>
+            <td class="border px-4 py-2">60h+</td>
+            <td class="border px-4 py-2">9500+</td>
+            <td class="border px-4 py-2">14+</td>
           </tr>
         </tbody>
       </table>
