--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
         uptime: "Uptime",
         users: "Active Users",
         servers: "Connected Servers",
-        footerDocs: "Docs",
         footerSupport: "Support",
         footerPrivacy: "Privacy Policy"
       },
@@ -44,7 +43,6 @@
         uptime: "稼働時間",
         users: "アクティブユーザー数",
         servers: "接続サーバー数",
-        footerDocs: "ドキュメント",
         footerSupport: "サポート",
         footerPrivacy: "プライバシー・ポリシー"
       }
@@ -180,9 +178,8 @@
   </section>
   <footer class="bg-gray-900 text-gray-400 py-6">
     <div class="max-w-7xl mx-auto px-4 flex justify-between">
-      <p>&copy; 2024 Fortify. All rights reserved.</p>
+      <p>&copy; 2024 Akane-team</p>
       <div class="flex space-x-4">
-        <a href="docs.html" class="hover:text-gray-200" data-i18n="footerDocs">ドキュメント</a>
         <a href="https://discord.gg/a32WABB8Qv" class="hover:text-gray-200" data-i18n="footerSupport">サポート</a>
         <a href="terms.html" class="hover:text-gray-200" deta-i18n="footerTerms">利用規約</a>
         <a href="privacy-policy.html" class="hover:text-gray-200" data-i18n="footerPrivacy">プライバシー・ポリシー</a>
