--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         status: "Status",
         features: "Features",
         dashboard: "Dashboard",
-        hello: "Fortify",
+        hello: "akane",
         introduction: "Multifunctional bot",
         installBot: "Install the Bot",
         announcements: "feature",
@@ -34,7 +34,7 @@
         status: "ステータス",
         features: "Botの特徴",
         dashboard: "ダッシュボード",
-        hello: "Fortify",
+        hello: "茜-あかね-",
         introduction: "多機能bot",
         installBot: "Botを導入する",
         announcements: "特徴",
