--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
   </section>
   <footer class="bg-gray-900 text-gray-400 py-6">
     <div class="max-w-7xl mx-auto px-4 flex justify-between">
-      <p>&copy; 2024-2025 Akane-team　紅蓮ノヴァ様のサイトを変更してデザインさせていただきました。ありがとうございます</p>
+      <p>&copy; 2024-2025 Akane-team、紅蓮ノヴァ様</p>
       <div class="flex space-x-4">
         <a href="https://discord.gg/a32WABB8Qv" class="hover:text-gray-200" data-i18n="footerSupport">サポート</a>
         <a href="terms.html" class="hover:text-gray-200" deta-i18n="footerTerms">利用規約</a>
