--- a/index.html
+++ b/index.html
@@ -4,46 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>茜-あかね-</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
 </head>
 <body>
     <header>
-        <div class="logo">
-            <h1>茜-あかね-</h1>
-        </div>
+        <div class="logo">茜-あかね-</div>
         <nav>
             <ul>
-                <li><a href="#intro">ホーム</a></li>
                 <li><a href="terms.html">利用規約</a></li>
                 <li><a href="privacy.html">プライバシーポリシー</a></li>
                 <li><a href="docs.html">ドキュメント</a></li>
                 <li><a href="status.html">Botステータス</a></li>
-                <li><a href="#setup">Botの導入</a></li>
             </ul>
         </nav>
-        <div class="lang-switch">
-            <button id="lang-ja">日本語</button>
-            <button id="lang-en">English</button>
-        </div>
+        <button id="lang-toggle">English</button>
     </header>
-
-    <main id="intro">
+    <main>
         <section class="hero">
-            <h2>Discord Bot 「茜-あかね-」のWebページへようこそ！</h2>
-            <p>管理者向けの多機能botです。</p>
-        </section>
-
-        <section id="setup" class="setup">
-            <h3>Botの導入</h3>
-            <p>「茜-あかね-」を導入するには、以下のリンクをクリックしてください。</p>
-            <a href="https://discord.com/oauth2/authorize?client_id=YOUR_CLIENT_ID&scope=bot" class="button">導入はこちら</a>
+            <h1>ようこそ！</h1>
+            <p>Discordボット「茜-あかね-」はあなたのサーバーを管理し、新たな楽しみを提供します。</p>
+            <button class="install-btn">ボットを導入する</button>
         </section>
     </main>
-
     <footer>
-        <p>&copy; 2024-2025 akane-team All Rights Reserved.</p>
+        <p>&copy; 2024-2025 akane-team</p>
     </footer>
 </body>
 </html>
-
