--- a/privacy.html
+++ b/privacy.html
@@ -13,7 +13,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">ホーム</a></li>
-                <li><a href="privacy.html">プライバシーポリシー</a></li>
+                <li><a href="terms.html">利用規約</a></li>
                 <li><a href="docs.html">ドキュメント</a></li>
                 <li><a href="status.html">Botステータス</a></li>
             </ul>
@@ -21,7 +21,7 @@
         <button id="lang-toggle">English</button>
     </header>
     <main>
-        <h1>利用規約</h1>
+        <h1>プライバシーポリシー</h1>
         <p>以下は、茜-あかね-のプライバシーポリシーです。Botを使用することで、以下のポリシーに同意したものとみなされます。</p>
         
         <div class="terms-section">
