--- a/status.html
+++ b/status.html
@@ -3,17 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>茜-あかね-</title>
-    
-    <!-- 5秒後に https://fortify.static.jp/ にリダイレクト -->
-    <meta http-equiv="refresh" content="0; url=https://akane-quin.glitch.me/status.html">
-
-    <link rel="stylesheet" href="styles.css">
+    <title>Botステータス - 茜-あかね-</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-    <!-- コンテンツ -->
-    <h1>リダイレクト中...</h1>
-
+    <header>
+        <div class="logo">茜-あかね-</div>
+        <nav>
+            <ul>
+                <li><a href="index.html">ホーム</a></li>
+                <li><a href="terms.html">利用規約</a></li>
+                <li><a href="privacy.html">プライバシーポリシー</a></li>
+                <li><a href="docs.html">ドキュメント</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <h1>Botステータス</h1>
+        <div class="status-card">
+            <p><strong>オンライン状況:</strong> <span id="status">オンライン</span></p>
+            <p><strong>起動時間:</strong> <span id="uptime">不明</span></p>
+            <p><strong>Ping:</strong> <span id="ping">不明</span></p>
+            <p><strong>サーバー数:</strong> <span id="guildCount">15+</span></p>
+            <p><strong>総メンバー数:</strong> <span id="memberCount">9000+</span></p>
+        </div>
+    </main>
+    <footer>
+        <p>&copy; 2024-2025 akane-team</p>
+    </footer>
 </body>
 </html>
