--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
                 <h3>Top</h3>
                 <div class="member-card">
                     <img src="images/top-member.jpg" alt="Top Member">
-                    <p>名前: ユーザーA</p>
-                    <p>役割: 管理者</p>
+                    <p>名前: あおい</p>
+                    <p>役割: 開発者</p>
                 </div>
             </div>
             
@@ -46,8 +46,8 @@
                 <h3>Subtop</h3>
                 <div class="member-card">
                     <img src="images/subtop-member.jpg" alt="Subtop Member">
-                    <p>名前: ユーザーB</p>
-                    <p>役割: 副管理者</p>
+                    <p>名前: Yu2pu1s</p>
+                    <p>役割: 副開発者</p>
                 </div>
             </div>
             
