--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <li><a href="status.html">Botステータス</a></li>
             </ul>
         </nav>
+                <div id="clock" class="clock">--:--:--</div>
     </header>
     <main>
         <section class="hero">
