--- a/status.html
+++ b/status.html
@@ -15,6 +15,7 @@
                 <li><a href="terms.html">利用規約</a></li>
                 <li><a href="privacy.html">プライバシーポリシー</a></li>
                 <li><a href="docs.html">ドキュメント</a></li>
+                        <div id="clock" class="clock">--:--:--</div>
             </ul>
         </nav>
     </header>
