--- a/terms.html
+++ b/terms.html
@@ -16,6 +16,7 @@
                 <li><a href="privacy.html">プライバシーポリシー</a></li>
                 <li><a href="docs.html">ドキュメント</a></li>
                 <li><a href="status.html">Botステータス</a></li>
+                        <div id="clock" class="clock">--:--:--</div>
             </ul>
         </nav>
         <button id="lang-toggle">English</button>
