--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </nav>
     </header>
     <main>
-    <img src="logo.jpg" alt="茜">
+    <img src="logo.png" alt="茜">
         <section class="hero">
             <h1>ようこそ！</h1>
             <p>Discordボット「茜-あかね-」はあなたのサーバーを管理し、新たな楽しみを提供します。</p>
