--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <img src="images/top-member.jpg" alt="Top Member">
             <p>名前: あおい</p>
             <p>役割: 開発者</p>
-            <p class="comment">作成中</p>
+            <p class="comment">茜-あかね-の開発者であり、開発や運営をしています。</p>
         </div>
     </div>
     
