--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <img src="images/moderater4.jpg" alt="Moderater 4">
                 <p>名前: ゆううゆ</p>
                 <p>役割: モデレーター</p>
-                <p class="comment">作成中</p>
+                <p class="comment">ユーザーの皆様が笑顔で使えるようにサポートさせていただきます</p>
             </div>
             <div class="member-card">
                 <img src="images/moderater5.jpg" alt="Moderater 5">
