--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
             <p>名前: あおい</p>
             <p>役割: 開発者</p>
             <p class="comment">茜-あかね-の開発者であり、開発や運営をしています。</p>
+            <!-- ソーシャルリンク -->
+            <div class="social-links">
+                <a href="https://x.com/aoi_tyandesu" target="_blank">X</a>
+                <a href="https://github.com/aoikozu" target="_blank">GitHub</a>
+            </div>
         </div>
     </div>
     
@@ -50,6 +55,10 @@
             <p>名前: Yu2pu1s</p>
             <p>役割: 副開発者</p>
             <p class="comment">作成中</p>
+            <!-- ソーシャルリンク -->
+            <div class="social-links">
+                <a href="https://github.com/Yu2pu1" target="_blank">GitHub</a>
+            </div>
         </div>
     </div>
     
@@ -57,35 +66,54 @@
     <div class="team-group">
         <h3>Moderater</h3>
         <div class="moderater-grid">
+            <!-- Moderater 1 -->
             <div class="member-card">
                 <img src="images/moderater1.jpg" alt="Moderater 1">
                 <p>名前: 紅蓮ノヴァ</p>
                 <p>役割: モデレーター</p>
-                <p class="comment">作成中</p>
+                <p class="comment">安心してご利用いただけるよう全力でサポートさせていただきます。</p>
+                <!-- ソーシャルリンク -->
+                <div class="social-links">
+                    <a href="https://guren-nova.net/" target="_blank">Webサイト</a>
+                    <a href="https://github.com/VibeShiftTeam" target="_blank">GitHub</a>
+                </div>
             </div>
+
+            <!-- Moderater 2 -->
             <div class="member-card">
                 <img src="images/moderater2.jpg" alt="Moderater 2">
                 <p>名前: Yuyuto</p>
                 <p>役割: モデレーター</p>
                 <p class="comment">作成中</p>
+                <!-- ソーシャルリンク -->
+                <div class="social-links">
+                    <a href="https://x.com/" target="_blank">X</a>
+                    <a href="https://github.com/Yuyuto000" target="_blank">GitHub</a>
+                </div>
             </div>
+
+            <!-- Moderater 3 -->
             <div class="member-card">
                 <img src="images/moderater3.jpg" alt="Moderater 3">
                 <p>名前: 스즈미 쿠즈는</p>
                 <p>役割: モデレーター</p>
                 <p class="comment">作成中</p>
-    　　　　　<div class="member-card">
-    　　　　　　　<img src="images/moderater4.jpg" alt="Moderater 4">
-    　　　　　　　<p>名前: ゆううゆ</p>
-    　　　　　　　<p>役割: モデレーター</p>
-    <p class="comment">ユーザーの皆様が笑顔で使えるようにサポートさせていただきます</p>
-    <!-- ソーシャルリンク -->
-    <div class="social-links">
-        <a href="https://x.com/Sabanusiyuuuyu" target="_blank">X</a>
-        <a href="https://github.com/yuuuyu1" target="_blank">GitHub</a>
-    </div>
-</div>
+            </div>
 
+            <!-- Moderater 4 -->
+            <div class="member-card">
+                <img src="images/moderater4.jpg" alt="Moderater 4">
+                <p>名前: ゆううゆ</p>
+                <p>役割: モデレーター</p>
+                <p class="comment">ユーザーの皆様が笑顔で使えるようにサポートさせていただきます</p>
+                <!-- ソーシャルリンク -->
+                <div class="social-links">
+                    <a href="https://x.com/Sabanusiyuuuyu" target="_blank">X</a>
+                    <a href="https://github.com/yuuuyu1" target="_blank">GitHub</a>
+                </div>
+            </div>
+
+            <!-- Moderater 5 -->
             <div class="member-card">
                 <img src="images/moderater5.jpg" alt="Moderater 5">
                 <p>名前: chaicharo</p>
@@ -95,6 +123,7 @@
         </div>
     </div>
 </section>
+
     </main>
     <footer>
         <p>&copy; 2024-2025 akane-team</p>
