--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>茜-あかね-</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
+        <link rel="icon" type="image/png" href="images/favicon.png"> <!-- PNG形式 -->
 </head>
 <body>
     <header>
