--- a/terms.html
+++ b/terms.html
@@ -6,6 +6,8 @@
     <title>利用規約 - 茜-あかね-</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
+        <link rel="icon" type="image/png" href="images/favicon.png"> <!-- PNG形式 -->
+
 </head>
 <body>
     <header>
