--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <img src="images/moderater2.jpg" alt="Moderater 2">
                 <p>名前: Yuyuto</p>
                 <p>役割: モデレーター</p>
-                <p class="comment">作成中</p>
+                <p class="comment">より一層のDiscordライフを安心安全にお送りします</p>
                 <!-- ソーシャルリンク -->
                 <div class="social-links">
                     <a href="https://github.com/Yuyuto000" target="_blank">GitHub</a>
