--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <p class="comment">安心してご利用いただけるよう全力でサポートさせていただきます。</p>
                 <!-- ソーシャルリンク -->
                 <div class="social-links">
-                    <a href="https://guren-nova.net/" target="_blank">Webサイト</a>
+                    <a href="https://guren-nova.net/" target="_blank">Web</a>
                     <a href="https://github.com/VibeShiftTeam" target="_blank">GitHub</a>
                 </div>
             </div>
@@ -118,7 +118,11 @@
                 <img src="images/moderater5.jpg" alt="Moderater 5">
                 <p>名前: chaicharo</p>
                 <p>役割: モデレーター</p>
-                <p class="comment">作成中</p>
+                <p class="comment">皆様のdiscordを安心安全に利用してもらうため、日々サポートさせてもらいます。</p>
+                
+                <div class="social-links">
+                    <a href="https://vibeshiftteam.github.io/chaicharo/" target="_blank">Web</a>
+                </div>
             </div>
         </div>
     </div>
