--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
     <footer>
         <p>&copy; 2024-2025 akane-team</p>
     </footer>
+    <img src="/cgi-bin/Count.cgi?ft=3|frgb=000;255;000|md=10|dd=B|df=sample">
 </body>
 </html>
 
