--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     <footer>
         <p>&copy; 2024-2025 akane-team</p>
     </footer>
-    <img src="/cgi-bin/Count.cgi?ft=3|frgb=000;255;000|md=10|dd=B|df=sample">
+    <!--タグはここから--><table border="0" cellspacing="0" cellpadding="0"><tr><style TYPE="text/css"><!--ul#acecounter li {margin:0px; padding:0px;}ul#acecounter li a {display:block;font-size:10px;}ul#acecounter li ul {display: none;}ul#acecounter li:hover ul {display: block;margin:0px; padding:0px;}ul#acecounter li ul li {float: none;margin:0; padding:0px;}--></style><td align="center"><a href="http://www.ace-counter.com/"><img src="http://www.ace-counter.com/d25_f6_1058/6797804774381/" alt="アクセスカウンター" border="0"></a></td></tr><tr><td align="center"><ul id="acecounter" style="list-style-type:none; margin:0px;padding:0px;"><li><a href="#"><img src="http://www.ace-counter.com/images/acecounter.gif" border="0"></a><ul style="list-style-type:none; text-align:left;margin-left:5px;"><li><a href="http://tvgame-shop.biz/">茜-あかね-</a></li></ul></li></ul></td></tr></table><!--ここまで-->
 </body>
 </html>
 
