--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     </main>
     <footer>
 　　　<p>&copy; 2024-2025 akane-team</p>
-            <!--タグはここから--><table border="0" cellspacing="0" cellpadding="0"><tr><style TYPE="text/css"><!--ul#acecounter li {margin:0px; padding:0px;}ul#acecounter li a {display:block;font-size:10px;}ul#acecounter li ul {display: none;}ul#acecounter li:hover ul {display: block;margin:0px; padding:0px;}ul#acecounter li ul li {float: none;margin:0; padding:0px;}--></style><td align="center"><a href="http://www.ace-counter.com/"><img src="http://www.ace-counter.com/d25_f6_1058/6797804774381/" alt="アクセスカウンター" border="0"></a></td></tr><tr><td align="center"><ul id="acecounter" style="list-style-type:none; margin:0px;padding:0px;"><li><a href="#"><img src="http://www.ace-counter.com/images/acecounter.gif" border="0"></a><ul style="list-style-type:none; text-align:left;margin-left:5px;"><li><a href="http://tvgame-shop.biz/">茜-あかね-</a></li></ul></li></ul></td></tr></table><!--ここまで-->
+　　　<img src="http://www5.kannet.ne.jp/~counter/count.cgi?name=akane&type=23&width=6">
     </footer>
 </body>
 </html>
