--- a/privacy.html
+++ b/privacy.html
@@ -87,6 +87,8 @@
     </main>
     <footer>
         <p>&copy; 2024-2025 akane-team</p>
+        　　　<img src="http://www5.kannet.ne.jp/~counter/count.cgi?name=akane&type=23&width=6">
+
     </footer>
 </body>
 </html>
