--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <img src="images/subtop-member.jpg" alt="Subtop Member">
             <p>名前: Yu2pu1s</p>
             <p>役割: 副開発者</p>
-            <p class="comment">作成中</p>
+            <p class="comment">葵さんの忠実なる眷属です</p>
             <!-- ソーシャルリンク -->
             <div class="social-links">
                 <a href="https://github.com/Yu2pu1" target="_blank">GitHub</a>
