--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
             <!-- ソーシャルリンク -->
             <div class="social-links">
                 <a href="https://github.com/Yu2pu1" target="_blank">GitHub</a>
+                <a href="https://x.com/yutupui8722" target="_blank">X</a>
             </div>
         </div>
     </div>
