--- a/status.html
+++ b/status.html
@@ -13,10 +13,10 @@
         <div class="logo">茜-あかね-</div>
         <nav>
             <ul>
-                <li><a href="index.html">ホーム</a></li>
-                <li><a href="terms.html">利用規約</a></li>
-                <li><a href="privacy.html">プライバシーポリシー</a></li>
-                <li><a href="docs.html">ドキュメント</a></li>
+                <li><a href="index">ホーム</a></li>
+                <li><a href="terms">利用規約</a></li>
+                <li><a href="privacy">プライバシーポリシー</a></li>
+                <li><a href="docs">ドキュメント</a></li>
                         <div id="clock" class="clock">--:--:--</div>
             </ul>
         </nav>
@@ -27,8 +27,8 @@
             <p><strong>オンライン状況:</strong> <span id="status">オンライン</span></p>
             <p><strong>起動時間:</strong> <span id="uptime">不明</span></p>
             <p><strong>Ping:</strong> <span id="ping">不明</span></p>
-            <p><strong>サーバー数:</strong> <span id="guildCount">20+</span></p>
-            <p><strong>総メンバー数:</strong> <span id="memberCount">10000+</span></p>
+            <p><strong>サーバー数:</strong> <span id="guildCount">21+</span></p>
+            <p><strong>総メンバー数:</strong> <span id="memberCount">12000+</span></p>
         </div>
     </main>
     <footer>
