--- a/terms.html
+++ b/terms.html
@@ -14,10 +14,10 @@
         <div class="logo">茜-あかね-</div>
         <nav>
             <ul>
-                <li><a href="index.html">ホーム</a></li>
-                <li><a href="privacy.html">プライバシーポリシー</a></li>
-                <li><a href="docs.html">ドキュメント</a></li>
-                <li><a href="status.html">Botステータス</a></li>
+                <li><a href="index">ホーム</a></li>
+                <li><a href="privacy">プライバシーポリシー</a></li>
+                <li><a href="docs">ドキュメント</a></li>
+                <li><a href="status">Botステータス</a></li>
                         <div id="clock" class="clock">--:--:--</div>
             </ul>
         </nav>
