--- a/commands.html
+++ b/commands.html
@@ -17,7 +17,7 @@
         <div></div>
     </div>    
     <nav class="nav">
-        <a href="index.html"><i class="fas fa-home"></i> ホーム</a>
+        <a href="docs.html"><i class="fas fa-home"></i> ホーム</a>
         <a href="install.html"><i class="fas fa-download"></i> 導入方法</a>
         <a href="commands.html"><i class="fas fa-list"></i> コマンド一覧</a>
         <a href="features.html"><i class="fas fa-tools"></i> 機能紹介</a>
@@ -33,22 +33,22 @@
                 <th>説明</th>
             </tr>
             <tr>
-                <td>/ban @ユーザー</td>
-                <td>指定ユーザーをBANする（管理機能）</td>
+                <td>!ban @ユーザー</td>
+                <td>指定ユーザーをBANする（管理機能）(作成中)</td>
             </tr>
             <tr>
-                <td>/play [曲名]</td>
-                <td>指定の曲を再生する（音楽機能）</td>
+                <td>!play [曲名]</td>
+                <td>指定の曲を再生する（音楽機能）(作成中)</td>
             </tr>
             <tr>
-                <td>/weather [都市名]</td>
-                <td>天気予報を表示（便利ツール）</td>
+                <td>!weather [都市名]</td>
+                <td>天気予報を表示（便利ツール）(作成中)</td>
             </tr>
         </table>
     </main>
 
     <footer class="footer">
-        <p>&copy; 2025 多機能Bot | <i class="fas fa-envelope"></i> サポート: support@example.com</p>
+        <p>&copy; 2024-2025 akaneteam&紅蓮ノヴァ | <i class="fas fa-envelope"></i> サポート: support@example.com</p>
         <p>多機能Botに関する質問やサポートが必要な場合は、サポートチームまでご連絡ください。24時間以内に対応いたします。</p>
         <p>このドキュメントは常に最新情報を提供することを目指しています。新しい機能や改善点があれば、随時アップデートいたします。</p>
     </footer>
