--- a/features.html
+++ b/features.html
@@ -17,7 +17,7 @@
         <div></div>
     </div>    
     <nav class="nav">
-        <a href="index.html"><i class="fas fa-home"></i> ホーム</a>
+        <a href="docs.html"><i class="fas fa-home"></i> ホーム</a>
         <a href="install.html"><i class="fas fa-download"></i> 導入方法</a>
         <a href="commands.html"><i class="fas fa-list"></i> コマンド一覧</a>
         <a href="features.html"><i class="fas fa-tools"></i> 機能紹介</a>
@@ -29,15 +29,15 @@
         <h2>多機能Botの主な機能</h2>
         <ul>
             <li><i class="fas fa-shield-alt"></i> <strong>管理機能</strong> - キック・BAN・ミュートなどの管理コマンド</li>
-            <li><i class="fas fa-music"></i> <strong>音楽機能</strong> - YouTubeやSpotifyから音楽を再生</li>
-            <li><i class="fas fa-wrench"></i> <strong>便利ツール</strong> - 翻訳、天気予報、計算機</li>
+            <li><i class="fas fa-music"></i> <strong>音楽機能</strong> - YouTubeやSpotifyから音楽を再生(作成中)</li>
+            <li><i class="fas fa-wrench"></i> <strong>便利ツール</strong> - 翻訳、天気予報、計算機(作成中)</li>
             <li><i class="fas fa-user-shield"></i> <strong>荒らし対策</strong> - 自動モデレーション、スパム対策</li>
-            <li><i class="fas fa-chart-line"></i> <strong>レベルシステム</strong> - ユーザーの活動に応じたレベルアップ</li>
+            <li><i class="fas fa-chart-line"></i> <strong>レベルシステム</strong> - ユーザーの活動に応じたレベルアップ(作成中)</li>
         </ul>
     </main>
 
     <footer class="footer">
-        <p>&copy; 2025 多機能Bot | <i class="fas fa-envelope"></i> サポート: support@example.com</p>
+        <p>&copy; 2024-2025 akaneteam&紅蓮ノヴァ | <i class="fas fa-envelope"></i> サポート: support@example.com</p>
         <p>多機能Botに関する質問やサポートが必要な場合は、サポートチームまでご連絡ください。24時間以内に対応いたします。</p>
         <p>このドキュメントは常に最新情報を提供することを目指しています。新しい機能や改善点があれば、随時アップデートいたします。</p>
     </footer>
