--- a/settings.html
+++ b/settings.html
@@ -6,6 +6,8 @@
     <title>多機能Bot Docs - 設定ガイド</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+            <link rel="icon" type="image/png" href="images/favicon.png"> <!-- PNG形式 -->
+
 </head>
 <body>
     <header class="header">
@@ -39,6 +41,7 @@
         <p>&copy; 2024-2025 akaneteam&紅蓮ノヴァ | <i class="fas fa-envelope"></i> サポート: support@example.com</p>
         <p>多機能Botに関する質問やサポートが必要な場合は、サポートチームまでご連絡ください。24時間以内に対応いたします。</p>
         <p>このドキュメントは常に最新情報を提供することを目指しています。新しい機能や改善点があれば、随時アップデートいたします。</p>
+                　　　<img src="http://www5.kannet.ne.jp/~counter/count.cgi?name=akane&type=23&width=6">
     </footer>
     <script>
         function toggleMenu() {
@@ -48,3 +51,12 @@
     </script>
 </body>
 </html>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7Q3C5WF65W"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-7Q3C5WF65W');
+</script>
