--- a/install.html
+++ b/install.html
@@ -19,12 +19,12 @@
         <div></div>
     </div>    
     <nav class="nav">
-        <a href="index.html"><i class="fas fa-home"></i> ホーム</a>
-        <a href="install.html"><i class="fas fa-download"></i> 導入方法</a>
-        <a href="commands.html"><i class="fas fa-list"></i> コマンド一覧</a>
-        <a href="features.html"><i class="fas fa-tools"></i> 機能紹介</a>
-        <a href="settings.html"><i class="fas fa-cog"></i> 設定ガイド</a>
-        <a href="faq.html"><i class="fas fa-question-circle"></i> FAQ</a>
+        <a href="docs"><i class="fas fa-home"></i> ホーム</a>
+        <a href="install"><i class="fas fa-download"></i> 導入方法</a>
+        <a href="commands"><i class="fas fa-list"></i> コマンド一覧</a>
+        <a href="features"><i class="fas fa-tools"></i> 機能紹介</a>
+        <a href="settings"><i class="fas fa-cog"></i> 設定ガイド</a>
+        <a href="faq"><i class="fas fa-question-circle"></i> FAQ</a>
     </nav>
 
     <main class="content">
