--- a/commands.html
+++ b/commands.html
@@ -34,12 +34,12 @@
                 <th>説明</th>
             </tr>
             <tr>
-                <td>!ban @ユーザー</td>
-                <td>指定ユーザーをBANする（管理機能）(作成中)</td>
+                <td>!ropa @ロール</td>
+                <td>ロールパネルを作成します。いくつでも追加できます</td>
             </tr>
             <tr>
-                <td>!play [曲名]</td>
-                <td>指定の曲を再生する（音楽機能）(作成中)</td>
+                <td>!mslock [メッセージ]</td>
+                <td>固定メッセージを作成します。</td>
             </tr>
             <tr>
                 <td>!weather [都市名]</td>
@@ -52,7 +52,6 @@
         <p>&copy; 2024-2025 akaneteam&紅蓮ノヴァ | <i class="fas fa-envelope"></i> サポート: support@example.com</p>
         <p>多機能Botに関する質問やサポートが必要な場合は、サポートチームまでご連絡ください。24時間以内に対応いたします。</p>
         <p>このドキュメントは常に最新情報を提供することを目指しています。新しい機能や改善点があれば、随時アップデートいたします。</p>
-                　　　<img src="http://www5.kannet.ne.jp/~counter/count.cgi?name=akane&type=23&width=6">
     </footer>
     <script>
         function toggleMenu() {
