--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <p>Discordボット「茜-あかね-」はあなたのサーバーを管理し、新たな楽しみを提供します。</p>
             <button class="install-btn" onclick="location.href='https://discord.com/oauth2/authorize?client_id=1272343342692171816'">ボットを導入する</button>
             <button class="install-btn" onclick="location.href='https://discord.com/invite/Agf97X5Jv3'">サポートサーバー</button>
+            <button class="install-btn" onclick="location.href='https://x.com/akane_bot_main'">公式X</button>
         </section>
 
 <!-- サポートチームセクション -->
