--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
             　　 <div id="clock" class="clock">--:--:--</div>
             </ul>
         </nav>
+                <!-- ログインボタン・ユーザー情報 -->
+        <div class="user-info">
+            <button id="login-btn">Discordでログイン</button>
+            <div id="user-profile" style="display: none;">
+                <img id="user-avatar" src="" alt="User Avatar">
+                <span id="user-name"></span>
+                <button id="logout-btn">ログアウト</button>
+            </div>
+        </div>
     </header>
     <main>
         <section class="hero">
