--- a/status.html
+++ b/status.html
@@ -22,13 +22,15 @@
         </nav>
     </header>
     <main>
-        <h1>Botステータス</h1>
+        <h1>Bot ステータス</h1>
         <div class="status-card">
-            <p><strong>オンライン状況:</strong> <span id="status">オンライン</span></p>
-            <p><strong>起動時間:</strong> <span id="uptime">不明</span></p>
-            <p><strong>Ping:</strong> <span id="ping">不明</span></p>
-            <p><strong>サーバー数:</strong> <span id="guildCount">21+</span></p>
-            <p><strong>総メンバー数:</strong> <span id="memberCount">12000+</span></p>
+            <p><strong>オンライン状況:</strong> <span id="bot-status">⏳ 読み込み中...</span></p>
+            <p><strong>起動時間:</strong> <span id="bot-uptime">⏳ 読み込み中...</span></p>
+            <p><strong>Ping:</strong> <span id="bot-ping">⏳ 読み込み中...</span></p>
+            <p><strong>サーバー数:</strong> <span id="bot-guilds">⏳ 読み込み中...</span></p>
+            <p><strong>総メンバー数:</strong> <span id="bot-members">⏳ 読み込み中...</span></p>
+            <p><strong>CPU使用率:</strong> <span id="bot-cpu">⏳ 読み込み中...</span></p>
+            <p><strong>メモリ使用量:</strong> <span id="bot-memory">⏳ 読み込み中...</span></p>
         </div>
     </main>
     <footer>
