--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <!-- ソーシャルリンク -->
                 <div class="social-links">
                     <a href="https://guren-nova.net/" target="_blank">Web</a>
-                    <a href="https://github.com/VibeShiftTeam" target="_blank">GitHub</a>
+                    <a href="https://github.com/guren-nova" target="_blank">GitHub</a>
                 </div>
             </div>
 
