--- a/dashboard.html
+++ b/dashboard.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ダッシュボード - 茜</title>
+    <title>ダッシュボード - 茜-あかね-</title>
     <link rel="stylesheet" href="style.css">
     <script defer src="dashboard.js"></script>
 </head>
 <body>
     <header>
-        <div class="logo">茜 - Dashboard</div>
+        <div class="logo">茜-あかね- - Dashboard</div>
         <nav>
             <button id="logout-btn">ログアウト</button>
         </nav>
