--- a/dashboard.html
+++ b/dashboard.html
@@ -6,6 +6,7 @@
     <title>多機能ダッシュボード - 茜-あかね-</title>
     <link rel="stylesheet" href="style3.css">
     <script defer src="dashboard.js"></script>
+    <link rel="icon" type="image/png" href="images/favicon.png"> <!-- PNG形式 -->
 </head>
 <body>
     <header>
