--- a/dashboard.html
+++ b/dashboard.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>多機能ダッシュボード - 茜-あかね-</title>
-    <link rel="stylesheet" href="style3.css">
+    <link rel="stylesheet" href="style.css">
     <script defer src="dashboard.js"></script>
     <link rel="icon" type="image/png" href="images/favicon.png"> <!-- PNG形式 -->
 </head>
