--- a/dashboard.html
+++ b/dashboard.html
@@ -13,16 +13,16 @@
         <div class="logo">茜-あかね-</div>
         <nav>
             <ul>
-                <li><a href="index.html">ホーム</a></li>
-                <li><a href="terms.html">利用規約</a></li>
-                <li><a href="privacy.html">プライバシーポリシー</a></li>
-                <li><a href="docs.html">ドキュメント</a></li>
+                <li><a href="index">ホーム</a></li>
+                <li><a href="terms">利用規約</a></li>
+                <li><a href="privacy">プライバシーポリシー</a></li>
+                <li><a href="docs">ドキュメント</a></li>
             </ul>
         </nav>
         <div id="user-profile">
             <button id="login-btn">ログイン</button>
             <button id="logout-btn" style="display: none;">ログアウト</button>
-            <img id="user-avatar" src="" alt="User Avatar" style="display: none;">
+            <img id="user-avatar" src="" alt="User Avatar" style="display: none;">    
         </div>
     </header>
 
