いろいろ変更

--- a/terms.html
+++ b/terms.html
@@ -18,6 +18,7 @@
                 <li><a href="privacy">プライバシーポリシー</a></li>
                 <li><a href="docs">ドキュメント</a></li>
                 <li><a href="status">Botステータス</a></li>
+                <li><a href="servers">連携サーバー一覧</a></li>
                         <div id="clock" class="clock">--:--:--</div>
             </ul>
         </nav>
