--- a/status.html
+++ b/status.html
@@ -17,6 +17,7 @@
                 <li><a href="terms">利用規約</a></li>
                 <li><a href="privacy">プライバシーポリシー</a></li>
                 <li><a href="docs">ドキュメント</a></li>
+                <li><a href="servers">連携サーバー一覧</a></li>
                         <div id="clock" class="clock">--:--:--</div>
             </ul>
         </nav>
